--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,6 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://danleeeee.github.io/hangman",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
-  "homepage":"https://danleeeee.github.io/hangman"
 }
