--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build &&gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,7 +31,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://danleeeee.github.io/hangman",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
