--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://danleeeee.github.io/hangman"
+  "homepage": "https://danleeeee.github.io/guessword"
 }
